--- a/src/pages/favorite/favorite.scss
+++ b/src/pages/favorite/favorite.scss
@@ -27,16 +27,18 @@ page-favorite {
 .product{
     margin: 30px 20px;
     p:first-of-type{
-       margin: 15px 0;
-       color:gray;
-       font-weight: bold;
-    }
+        margin: 10px 0;
+        color:gray;
+        font-weight: bold;
+     }
     .heart{
-        border: none;
-        font-size: 40px;
+        font-size: 20px;
+        margin: 5px 10px;
+        padding: 5px 10px;
         position: absolute;
         right: 5px;
-        color: white;
+        border: 2px solid #f39e2f;
+        color: #f39e2f;
     }
     p:last-of-type{
        margin: 5px 0;
@@ -65,7 +67,7 @@ page-favorite {
 }
   [col-6] 
   { 
-   padding: 0 10px;
+    padding:10px;
     img{
        width: 100%;
        height: 185px;
