--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,7 +1,7 @@
 page-home {
-.back-button.show-back-button{
-    display: none
-}
+// .back-button.show-back-button{
+//     display: none
+// }
 .toolbar-title{
     text-align: center;
     font-family:Bitter;
@@ -69,7 +69,7 @@ ion-segment-button.segment-button {
 .product{
     margin: 30px 20px;
     p:first-of-type{
-       margin: 15px 0;
+       margin: 10px 0;
        color:gray;
        font-weight: bold;
     }
@@ -92,6 +92,7 @@ ion-segment-button.segment-button {
         width: 70%;
         text-transform: none;
         height: 30px;
+        
     }
     #no{
         display: inline-flex;
@@ -107,12 +108,16 @@ ion-segment-button.segment-button {
 }
   [col-6] 
   { 
-   padding: 0 10px;
+   padding:10px;
     img{
        width: 100%;
        height: 185px;
        border-radius: 10px;
        box-shadow: 0px 3px 37px #868481;
        }
+  }
+
+  .quandiv{
+    display: none;
   }
 }
