--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -78,7 +78,7 @@ ion-segment-button.segment-button {
         font-size: 40px;
         position: absolute;
         right: 5px;
-        color: white;
+        color: #f18900;
     }
     p:last-of-type{
        margin: 5px 0;
