--- a/src/pages/cart/cart.scss
+++ b/src/pages/cart/cart.scss
@@ -19,7 +19,7 @@ page-cart {
   background-image:none;
 }
 
-[col-5] 
+[col-4] 
 { text-align: end;
   div{
     background: gray;
@@ -49,33 +49,33 @@ page-cart {
 
 .itemrow{
     .row{
-        margin:0 0 30px;
+        margin: 0 0 15px;
     }
     position: relative;
     top: 12%;
-    width: 90%;
+    width: 95%;
     height: 145px;
     margin: 30px auto 0px;
-    p:first-of-type{
-         margin: 0 10px 20px;
+    .p1{
+         margin: 0 5px 10px;
          font-size: 20px;
          opacity: 0.7;
 
     }
-    p:last-of-type{
-         margin: 0 10px 25px;
+    .p2{
+         margin:0 10px 15px;
          font-size: 17px;
          color:orange;
          font-weight: bold;
     }
-    [col-5] img{
+    [col-4] img{
         border-radius: 6px;
         box-shadow: 3px 3px 36px #bbbaba;
-        .tcolor{
-
-        }
+        height: 135px;
+        min-height: 135px;
+        max-height: 135px;
     }
-    [col-7] div{
+    [col-8] div{
         font-size: 18px;
         border-bottom:1px solid lightgray;
         margin: 8px;
@@ -139,5 +139,10 @@ page-cart {
 
 .footer-md::before{
     background-image: none;
+}
+.closeicon{
+    border: 1px solid gray;
+    padding: 5px 7px;
+    border-radius: 50%
 }
 }
