--- a/src/pages/favorite/favorite.scss
+++ b/src/pages/favorite/favorite.scss
@@ -54,9 +54,11 @@ page-favorite {
         height: 30px;
     }
     #no{
-        display: inline-flex;
+        display: inline;
         color: gray;
-        margin:0 5px;
+        margin: 0 5px;
+        width: 10px;
+        border: none;
     }
     ion-icon{
         border: 1px solid lightgray;
@@ -76,5 +78,22 @@ page-favorite {
        }
   }
 
-
+  .quandiv{
+    display: block;
+  }
+  .quandivdis{
+      display: none;
+  }
+  .disbtn{
+    display: none;
+  }
+  .nondisbtn{
+    display: block;
+    background-color: #d0cfe0;
+    color: white;
+    border-radius: 30px;
+    width: 70%;
+    text-transform: none;
+    height: 30px;
+  }
 }
