--- a/src/pages/cart/cart.scss
+++ b/src/pages/cart/cart.scss
@@ -145,4 +145,12 @@ page-cart {
     padding: 5px 7px;
     border-radius: 50%
 }
+
+#no{
+    display: inline;
+    color: gray;
+    margin: 0 5px;
+    width: 10px;
+    border: none;
+}
 }
