--- a/src/pages/addlocation/addlocation.scss
+++ b/src/pages/addlocation/addlocation.scss
@@ -2,25 +2,19 @@ page-addlocation {
 .toolbar-background{
     background: white;
 }
-
+.scroll-content{
+  padding-bottom: 0 !important;
+}
 .header::after{
   background-image:none;
 }
     .back-button.show-back-button{
         display: none;
     }
- #map {
-       background-image: url('../assets/imgs/map.jpg');
-        height: 86%;
-        height: 100%;
-      }
-      .map {
-        height: 100%
-      }
       
       .tobalagh{
         width: 100%;
-        background-color: brown;
+        background-color: #32bdd6;
         opacity: 1;
       }
       a[disabled], button[disabled], [ion-button][disabled]{
@@ -31,9 +25,15 @@ page-addlocation {
         background-color:white
       }
       .forma{
-        position:fixed;
+     
         bottom:0;
         width:100%
       }      
-
+      .map {
+        height: 100%
+      }
+      #map {
+        width: 100%;
+        height: 83%;
+      }
 }
