--- a/src/pages/locations/locations.scss
+++ b/src/pages/locations/locations.scss
@@ -49,7 +49,8 @@ page-locations {
     margin:30px 10px;
 img{
     height: 20px;
-    margin-bottom:50px;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 .label{
     p{
@@ -62,6 +63,13 @@ img{
     display: inline-block;
 
    
+}
+.deleteicon{
+    border: 1px solid #32bdd6;
+    border-radius: 50%;
+    padding: 3px 6px;
+    width: 25px;
+    margin-top: 10px;
 }
 }
  .item-radio-checked.item-md ion-label{
