--- a/src/pages/favorite/favorite.scss
+++ b/src/pages/favorite/favorite.scss
@@ -57,7 +57,8 @@ page-favorite {
         display: inline;
         color: gray;
         margin: 0 5px;
-        width: 10px;
+        width: 20px;
+        text-align: center;
         border: none;
     }
     ion-icon{
