--- a/src/pages/invoice/invoice.scss
+++ b/src/pages/invoice/invoice.scss
@@ -23,8 +23,14 @@ page-invoice {
   text-align: start;
   font-weight: 400;
 }
+.home{
+    background: orange;
+    border-radius: 10px;
+    width: 80%;
+    margin: 20px auto 0;
+}
 .colright{
-  color:black;
+  color:orange;
   text-align: end;
   font-weight: 400;
 }
