--- a/src/pages/history/history.scss
+++ b/src/pages/history/history.scss
@@ -49,21 +49,19 @@ ion-segment-button {
       }
 }
 .itemrow{
-    .row{
-        margin:0 0 30px;
-    }
+    
     position: relative;
     top: 12%;
     width: 90%;
     height: 145px;
     margin: 30px auto 0px;
-    p:first-of-type{
-         margin: 0 10px 20px;
+    .p1{
+         margin: 0 5px 20px;
          font-size: 20px;
          opacity: 0.7;
 
     }
-    p:last-of-type{
+    .p2{
          margin: 0 10px 25px;
          font-size: 17px;
          color:orange;
@@ -71,8 +69,11 @@ ion-segment-button {
     [col-5] img{
         border-radius: 6px;
         box-shadow: 3px 3px 36px #bbbaba;
+        min-height: 140px;
+        height: 140px;
+        max-height: 140px;
     }
-    [col-7] ion-row{
+    [col-7] .payrow{
         font-size: 18px;
         border-bottom:1px solid lightgray;
         margin: 8px;
@@ -80,6 +81,12 @@ ion-segment-button {
         position: absolute;
         bottom: 0;
         width: 100%;
+    }
+
+    .closeicon{
+        border: 1px solid gray;
+        padding: 5px 7px;
+        border-radius: 50%
     }
 }
 #price{
@@ -90,6 +97,7 @@ ion-segment-button {
     border-radius: 7px;
     position: absolute;
     bottom: 15px;
+    text-align: center;
     right: -5px;
     font-size: 23px;
     color: white;
