--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,7 +1,7 @@
 page-home {
-// .back-button.show-back-button{
-//     display: none
-// }
+.back-button.show-back-button{
+    display: none
+}
 .toolbar-title{
     text-align: center;
     font-family:Bitter;
@@ -98,7 +98,8 @@ ion-segment-button.segment-button {
         display: inline;
         color: gray;
         margin: 0 5px;
-        width: 10px;
+        width: 20px;
+        text-align: center;
         border: none;
     }
     ion-icon{
