--- a/src/pages/editaccount/editaccount.scss
+++ b/src/pages/editaccount/editaccount.scss
@@ -42,7 +42,7 @@ page-editaccount {
 .formaa{
     margin:0 10%;;
     width: 80%;
-    position: fixed;
+    position: static;
     top: 30%;
     p{
         text-align: end;
