--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -21,7 +21,7 @@ page-signup {
 .formaa{
     margin:0 10%;;
     width: 80%;
-    position: fixed;
+    position: static;
     top: 30%;
     p{
         text-align: end;
