--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -25,7 +25,7 @@ src: url('../assets/fonts/Bitter/Bitter-Regular.ttf') ;
 .toolbar-ios ion-title{
     padding: 0 10px 1px !important;
 }
-[dir="rtl"] .back-button-icon{
+[dir="rtl"] .back-button-icon {
     transform: rotate(180deg)
 }
 .cartno{
@@ -59,6 +59,9 @@ src: url('../assets/fonts/Bitter/Bitter-Regular.ttf') ;
 //     left: 15px;
 //     width: 92%;
 // }
+ion-icon [name] {
+
+}
 page-invoice.ion-page.show-page{
     height: 65% !important;
     position: fixed;
