--- a/src/pages/addlocation/addlocation.scss
+++ b/src/pages/addlocation/addlocation.scss
@@ -12,9 +12,10 @@ page-addlocation {
         display: none;
     }
       
-      .tobalagh{
+      .tobalagh{    
+        background-color: #ffdf1b;
+        color: black;
         width: 100%;
-        background-color: #32bdd6;
         opacity: 1;
       }
       a[disabled], button[disabled], [ion-button][disabled]{
