--- a/src/pages/category/category.scss
+++ b/src/pages/category/category.scss
@@ -21,11 +21,19 @@ page-category {
 [col-6] img{
     width: 100px;
     height: 100px;
+    border-radius: 50%
 }
 .imgdiv{
     text-align: center;
     color: #8490a5;
     font-size: 18px;
     font-weight: 500;
+}
+
+yellowtabs #btn2 {
+    background-image: url(../assets/imgs/caton.png);
+    margin: 0;
+    height: 45px;
+    
 }
 }
