--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -2,6 +2,16 @@ page-login {
 .back-button.show-back-button{
     display: none
 }
+
+.imgdiv{
+    margin: 10px auto;
+    width: 40%;
+    height: 150px;
+    text-align: center;
+    img{
+        height: 100%;
+    }
+}
 .toolbar-title{
     text-align: center;
     font-family:Bitter;
@@ -26,14 +36,15 @@ page-login {
         text-align: end;
         font-size: 16px;
         color: #717171;
-        margin: 20px 0 50px;
+        margin: 20px 0 15px;
     }
 }
 .label{
         margin: 0 !important;
-        color: #b5b5b5;
+        color: #3b9ea6;
         letter-spacing: 0px;
         font-size: 14px;
+        font-size: 20px;
     }
  .input{
      border-bottom: 0.5px solid lightgray;
@@ -51,29 +62,31 @@ page-login {
 
    
 }
-[col-3] img{
+[col-4] img{
     height: 50px;
     width: 50px;
-    border:2px solid lightgray;
     border-radius: 50%;
-    padding: 8px;
 }
-[col-6] .button{
-    width: 90%;
-    border-radius: 35px;
-    border-color: lightgray;
-    border-width: 2px;
-    text-transform: none;
-    height: 45px;
-    color: #08a1bd;
-    font-size: 16px;
-    font-weight: 600;
-    letter-spacing: 0.5px;
-    margin:0 30%;
+[col-12]  {
+    text-align: center;
+    .button{
+        width: 60%;
+        border-radius: 35px;
+        border-color: white;
+        border-width: 2px;
+        text-transform: none;
+        height: 45px;
+        color: white;
+        background: #3b9ea6;
+        font-size: 16px;
+        font-weight: 600;
+        letter-spacing: 2px;
+        margin: 0 auto;
+    } 
 }
 .sign{
     text-align: center;
-    margin: 70px 0;
+    margin: 25px 0;
     color: gray;
     font-weight: 500;
     letter-spacing: 1px;
