--- a/src/pages/payment/payment.scss
+++ b/src/pages/payment/payment.scss
@@ -25,9 +25,9 @@ page-payment {
     text-align: center;
 }
 [col-9] .button{
-    height: 58px;
+    height: 50px;
     border-radius: 30px;
-    background: #32bdd6;
+    background: $blueColor;
     font-size: 20px;
     margin-top: 10px;
     text-transform: none;
@@ -35,9 +35,9 @@ page-payment {
     width: 57%;
 }
 [col-3] .button{
-    height: 58px;
+    height: 50px;
     border-radius: 30px;
-    background: lightgray;
+    background: $yellowColor;
     font-size: 20px;
     margin-top: 10px;
     text-transform: none;
@@ -61,7 +61,7 @@ img{
     width: 90%;
     padding: 0;
     display: inline-block;
-
+    background-color: transparent;
    
 }
 }
