--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -1,7 +1,13 @@
 page-signup {
-.back-button.show-back-button{
-    display: none
-}
+    .imgdiv{
+        margin: 10px auto;
+        width: 40%;
+        height: 150px;
+        text-align: center;
+        img{
+            height: 100%;
+        }
+    }
  .toolbar-title{
     text-align: center;
     font-family:Bitter;
@@ -31,11 +37,12 @@ page-signup {
     }
 }
 .label{
-        margin: 0 !important;
-        color: #b5b5b5;
-        letter-spacing: 0px;
-        font-size: 14px;
-    }
+    margin: 0 !important;
+    color: #3b9ea6;
+    letter-spacing: 0px;
+    font-size: 14px;
+    font-size: 20px;
+}
  .input{
      border-bottom: 1px solid lightgray;
      margin-bottom: 30px;
@@ -76,7 +83,7 @@ page-signup {
 }
 .sign{
     text-align: center;
-    margin: 70px 0;
+    margin: 20px 0;
     color: gray;
     font-weight: 500;
     letter-spacing: 1px;
