--- a/src/pages/tabs/tabs.scss
+++ b/src/pages/tabs/tabs.scss
@@ -1,15 +1,14 @@
 page-tabs {
  .tabs-md .tab-button{
-    background-size:35px ;
+  
     background-repeat: no-repeat;
     background-position: center;
     margin: 0px;
     padding: 0;
     }
-.tabs-md .tab-button[aria-selected=true]{
-    background-size:75px ;
-    }
-
+// .tabs-md .tab-button[aria-selected=true]{
+//     background-size:75px ;
+//     }
 
 .tabs-md .tab-button[id=tab-t0-0]{
     background-image: url('../assets/imgs/home.png');
@@ -17,42 +16,42 @@ page-tabs {
 .tabs-md .tab-button[aria-selected=true][id=tab-t0-0]{
      background-image: url('../assets/imgs/homeon.png'); 
 }
-
-
-
 .tabs-md .tab-button[id=tab-t0-1]{
-    background-image: url('../assets/imgs/category.png');
+    background-image: url('../assets/imgs/map.png');
 }
 .tabs-md .tab-button[aria-selected=true][id=tab-t0-1]{
-     background-image: url('../assets/imgs/categoryon.png');
+     background-image: url('../assets/imgs/mapon.png');
 }
-
-
 
 
 .tabs-md .tab-button[id=tab-t0-2]{
-    background-image: url('../assets/imgs/fav.png');
+    background-image: url('../assets/imgs/cart.png');
 }
+
 .tabs-md .tab-button[aria-selected=true][id=tab-t0-2]{
-     background-image: url('../assets/imgs/favon.png');
+     background-image: url('../assets/imgs/carton.png');
 }
 
 
 
 .tabs-md .tab-button[id=tab-t0-3]{
-  background-image: url('../assets/imgs/person.png');
-   }
+    background-image: url('../assets/imgs/profile.png');
+}
 .tabs-md .tab-button[aria-selected=true][id=tab-t0-3]{
-     background-image: url('../assets/imgs/personon.png');
+     background-image: url('../assets/imgs/profon.png');
 }
 
 
 
 .tabs-md .tab-button[id=tab-t0-4]{
-    background-image: url('../assets/imgs/settings.png');
-}
-.tabs-md .tab-button[aria-selected=true][id=tab-t0-4]{
-     background-image: url('../assets/imgs/settingson.png');
-     background-size:85px ;
-}
+  background-image: url('../assets/imgs/more.png');
+   }
+
+   .tabs-md .tab-button[aria-selected=true][id=tab-t0-4]{
+         background-image: url('../assets/imgs/moreon.png');
+         
+    }
+
+
+
 }
