--- a/src/pages/tartoptions/tartoptions.scss
+++ b/src/pages/tartoptions/tartoptions.scss
@@ -67,7 +67,7 @@ page-tartoptions {
     width: 65px;
     display: inline-flex;
     border-radius: 50%;
-    border:1px solid lightgray;
+    border:3px solid lightgray;
     height: 65px;
     img{
         width: 100%;
@@ -92,10 +92,11 @@ page-tartoptions {
        width: 115px;
        text-align: center;
        display: inline-block;
+       background: transparent;
 }
 .coloritem{
     width: 80px;
-    
+    background: transparent;
 }
 .list-md .item-block .item-inner{
     border-bottom:none;
@@ -126,7 +127,7 @@ page-tartoptions {
   }
 .item-radio-checked.item-md ion-label{
     .size{
-        box-shadow: 3px 4px 37px lightgray;
+        box-shadow: 0px 0px 24px 6px lightgrey;
     }
     
 }
@@ -144,12 +145,32 @@ page-tartoptions {
     width: 100%;
   
 }
+
+ion-scroll.scroll-x .scroll-content {
+    overflow-x: auto;
+    width: 100vw !important;
+    height: 100%;
+    .scroll-zoom-wrapper {
+        width: 100vw !important;
+    }
+}
+ion-scroll {
+    .scroll-content{
+        white-space: nowrap;
+        height: 290px;
+        overflow-x:scroll;
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
+
 .swiper-container-android .swiper-slide, .swiper-wrapper{
     width: 45px;
     height: 50px;
     border-radius: 50%;
     border:1px solid lightgray;
 }
+
 
 .list{
     text-align: center;
@@ -199,6 +220,6 @@ page-tartoptions {
     margin: 10px auto;
     text-transform: none;
     font-size: 17px;
-    background: #3eabc2;
+    background: $blueColor;
 }
 }
