--- a/src/components/yellowhead/yellowhead.html
+++ b/src/components/yellowhead/yellowhead.html
@@ -4,18 +4,17 @@
  
   <ion-col col-8>
       <form id="demo-2">
-          <input type="search" placeholder="Search">
+         <img src="assets/imgs/search.png" (click)="gosearch()">
+          
         </form>
-  </ion-col>
-  <ion-col col-1 style="padding-top: 15px;text-align: center;">
   </ion-col> 
-  <ion-col col-3>
+  <ion-col col-4>
     <ion-segment>
       <ion-segment-button (click)="changeLangen()">
          En
       </ion-segment-button>
       <ion-segment-button (click)="changeLangar()">
-         عربى
+         AR
       </ion-segment-button>
     </ion-segment>
   </ion-col>
