--- a/src/pages/cart/cart.scss
+++ b/src/pages/cart/cart.scss
@@ -73,7 +73,7 @@ page-cart {
     }
     [col-8] div{
         font-size: 18px;
-        border-bottom:1px solid lightgray;
+        border-bottom:1px solid gray;
         margin: 8px;
         padding-bottom: 10px;
         position: absolute;
