--- a/src/pages/contactus/contactus.scss
+++ b/src/pages/contactus/contactus.scss
@@ -36,7 +36,23 @@ yellowtabs #btn3 {
     box-shadow: 0px 2px 13px 0px grey;
     .button{
         width: 30%;
-        margin: 10px;
+        margin: 10px;    width: 30%;
+        margin: 5px;
+        background: #3b9ea6;
+        float: right;
+        text-transform: none;
+        border-radius: 10px;    width: 30%;
+        margin: 5px;
+        background: #3b9ea6;
+        float: right;
+        text-transform: none;
+        border-radius: 10px;
+        background: #3b9ea6;
+        float: right;
+        text-transform: none;
+        border-radius: 10px;
+        width: 30%;
+        margin: 5px;
         background: #3b9ea6;
         float: right;
         text-transform: none;
