--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -79,7 +79,7 @@ p{
     z-index: 10;
     width: 70px;
     text-align: center;
-    font-size: 18px;
+    // font-size: 18px;
     height: 70px;
     letter-spacing: 3px;
 }
