--- a/src/components/yellowhead/yellowhead.scss
+++ b/src/components/yellowhead/yellowhead.scss
@@ -7,8 +7,9 @@ yellowhead {
 .segment-md .segment-button {
     font-family: 'Enfont';
     border:none;
+    font-size: 2rem; 
   &:hover{
-    font-size: 1.6rem;  
+    font-size: 2.2rem;  
     color:$blueColor;
     font-weight: bold;
 
@@ -25,7 +26,22 @@ yellowhead {
     font-size: 18px;
   
 }
-
+.segment-ios .segment-button {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    width: 0;
+    height: 3.2rem;
+    border-width: 1px;
+    border-style: solid;
+    border-color: transparent;
+    font-size: 1.3rem;
+    line-height: 3rem;
+    color: #3b9ea6;
+    font-size: 18px;
+    background-color: transparent;
+}
 
 .logodiv{
     width: 20%;
@@ -41,55 +57,7 @@ yellowhead {
     flex:2;
 }
 
-input {
-	outline: none;
-}
-input[type=search] {
-	-webkit-appearance: textfield;
-	-webkit-box-sizing: content-box;
-	font-family: inherit;
-	font-size: 100%;
-}
-input::-webkit-search-decoration,
-input::-webkit-search-cancel-button {
-	display: none; 
-}
-
-
-input[type=search] {
-	background: transparent url('../assets/imgs/search.png') no-repeat 9px center;
-	border: solid 1px #ccc;
-	padding: 9px 10px 9px 32px;
-	width: 55px;
-	
-	-webkit-border-radius: 10em;
-	-moz-border-radius: 10em;
-	border-radius: 10em;
-	
-	-webkit-transition: all .5s;
-	-moz-transition: all .5s;
-	transition: all .5s;
-}
-#demo-2 input[type=search] {
-    width: 20px;
-    padding: 10px;
-    color: transparent;
-    cursor: pointer;
-}
-#demo-2 input[type=search]:hover {
-	background-color: #fff;
-}
-#demo-2 input[type=search]:focus {
-	width: 200px;
-	padding-left: 32px;
-	color: #000;
-	background-color: #fff;
-	cursor: auto;
-}
-#demo-2 input:-moz-placeholder {
-	color: transparent;
-}
-#demo-2 input::-webkit-input-placeholder {
-	color: transparent;
+#demo-2 {
+   padding: 10px;
 }
 }
