--- a/src/pages/favorite/favorite.scss
+++ b/src/pages/favorite/favorite.scss
@@ -36,6 +36,10 @@ page-favorite {
         padding:0 5px 0;
         color: #3b9ea6;
         font-weight: bold;
+        line-height: 15px; 
+        max-height: 30px;
+        overflow: scroll;
+
     }
     .heart{
         font-size: 20px;
