--- a/src/pages/mainadds/mainadds.scss
+++ b/src/pages/mainadds/mainadds.scss
@@ -6,8 +6,8 @@ page-mainadds {
         text-align: center;
         display: block;
         width: 100%;
-        height: 100%;}
-        
+        height: 100%;
+    }
     .product{
         margin: 10px;
         width: 95%;
@@ -24,6 +24,10 @@ page-mainadds {
             padding:0 5px 0;
             color: #3b9ea6;
             font-weight: bold;
+            line-height: 15px;
+            max-height: 30px;
+            overflow: scroll;
+
         }
         .heart{
             border: none;
@@ -53,7 +57,6 @@ page-mainadds {
             color: #3b9ea6;
             margin: 0 5px;
             font-size: 20px;
-            width: 20px;
             text-align: center;
             border: none;
         }
@@ -85,7 +88,7 @@ page-mainadds {
         margin: 3px 0;
     }
     .contdiv{
-        height: 230px;
+        height: 240px;
         position: relative;
         border-radius: 10px;
         border: 1px solid gray;
@@ -95,7 +98,7 @@ page-mainadds {
         box-shadow: 0px 5px 15px 0px #a0a0a0;
         img {
             border-radius: 10px;
-            height: 82%;
+            height: 78%;
             max-height: 82%;
             box-shadow: 1px 2px 10px 1px grey;
         }
@@ -106,7 +109,16 @@ page-mainadds {
         }
     }
 
-
+    .btnsdiv {
+        display: block; 
+        background-color: #3b9ea6;
+        color: white;
+        border-radius: 30px;
+        text-transform: none;
+        height: 30px;
+        font-weight: normal;
+        font-size: 12px !important;
+    }
     ion-scroll {
         .scroll-content{
             white-space: nowrap;
